# mobilityDuck_v

./: CMakeLists.txt  README.md  dist_join.sql  generate_function_reference.py  vcpkg.json
benchmark/BerlinMOD/: compare_memory.py
benchmark/BerlinMOD/results/memory/hanoi0.005/: query_1.csv  query_2.csv  query_7.csv  query_8.csv  query_9.csv
benchmark/BerlinMOD/results/memory/hanoi0.01/: query_1.csv  query_10.csv  query_11.csv  query_15.csv  query_7.csv
benchmark/BerlinMOD/results/output/hanoi0.01/: query_1.csv  query_10.csv  query_16.csv  query_2.csv  query_3.csv  query_6.csv  query_8.csv  query_9.csv
benchmark/BerlinMOD/results/stats/: fig.py
benchmark/BerlinMOD/results/stats/hanoi0.005/: load_data.json  run_queries_memory.json
benchmark/BerlinMOD/results/stats/hanoi0.01/: load_data.json  run_queries.json  run_queries_memory.json
benchmark/BerlinMOD/sql/load/: 07_trips.sql
benchmark/BerlinMOD/sql/memory/: query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_13.sql  query_14.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
benchmark/BerlinMOD/sql/queries/: query_5.sql
examples/air-traffic-control/: .gitignore  ATC.ipynb
src/: mobilityduck_extension.cpp
src/geo/: tgeometry.cpp  tgeompoint.cpp  tgeompoint_functions.cpp
src/include/: tydef.hpp
src/include/geo/: tgeompoint_functions.hpp
src/include/temporal/: set.hpp  span.hpp  temporal.hpp  temporal_functions.hpp
src/sgl/: .gitignore  Makefile  sgl.cpp  sgl.hpp  sgl_test.cpp
src/spatial/: spatial_extension.cpp  spatial_extension.hpp  spatial_geoarrow.cpp  spatial_geoarrow.hpp  spatial_types.cpp  spatial_types.hpp
src/spatial/geometry/: geometry_serialization.cpp  geometry_serialization.hpp  geometry_type.hpp
src/spatial/index/rtree/: rtree.cpp  rtree_index.cpp  rtree_index.hpp  rtree_index_create_physical.cpp  rtree_index_create_physical.hpp  rtree_index_plan_scan.cpp  rtree_index_pragmas.cpp  rtree_index_scan.cpp  rtree_module.hpp
src/spatial/modules/: CMakeLists.txt
src/spatial/modules/gdal/: gdal_module.cpp  gdal_module.hpp
src/spatial/modules/geos/: geos_geometry.hpp  geos_module.cpp  geos_module.hpp
src/spatial/modules/main/: spatial_functions.hpp  spatial_functions_aggregate.cpp  spatial_functions_cast.cpp  spatial_functions_scalar.cpp  spatial_functions_table.cpp
src/spatial/modules/mvt/: CMakeLists.txt  mvt_module.cpp  mvt_module.hpp
src/spatial/modules/osm/: osm_module.cpp  osm_module.hpp
src/spatial/modules/proj/: CMakeLists.txt  memvfs.c  proj_module.cpp  proj_module.hpp
src/spatial/modules/shapefile/: shapefile_module.cpp  shapefile_module.hpp
src/spatial/operators/: spatial_join_logical.cpp  spatial_join_logical.hpp  spatial_join_optimizer.cpp  spatial_join_optimizer.hpp  spatial_join_physical.cpp  spatial_join_physical.hpp
src/spatial/util/: distance_extract.hpp  function_builder.cpp  function_builder.hpp  math.cpp
src/temporal/: set.cpp  span.cpp  temporal.cpp  temporal_functions.cpp
test/sql/: set.test  span.test  tbool.test  tfloat.test  tgeompoint.test  tint.test  ttext.test
vcpkg_ports/meos/: portfile.cmake
